# tiqiaa_tview_python

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tiqiaa_cli.py  tiqiaa_gui.py
docs/: DRIVER_SETUP.md  PROTOCOL.md
examples/: automation.py  basic_send.py  learn_code.py
ir_codes/: .gitkeep
tiqiaa/: __init__.py  device.py  nec.py  protocol.py  storage.py
